Icon: Always respect the animated property

It used to animate from inactive to active regardless and from enabled
to disabled. Always respect the animated property. if is disabled, never
do the animation.

BUG:466357