src/primitives/icon.h
@@ -285,7 +285,6 @@ private:
     qreal m_animValue = 1.0;
     bool m_animated = false;
     bool m_roundToIconSize = true;
-    bool m_allowNextAnimation = false;
     bool m_blockNextAnimation = false;
     QPointer<QQuickWindow> m_window;
 };
